Closed Bug 1635184 Opened 5 years ago Closed 5 years ago

AXSubrole SearchField is never exposed to VoiceOver.

Categories

(Core :: Disability Access APIs, defect, P1)

Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: MarcoZ, Assigned: MarcoZ)

References

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

Found while implementing tests in bug 1634373. There are two places where SubRole tries to expose it:

  1. In the "Landmark" section, but the searchbox is not a landmark role, so this will never be true.
  2. In the roles below, but the actual Gecko role is not entry, so this again is never true.

To fix, the first should just be removed, and the second fixed.

The code in mozAccessible SubRole was actually never executed for inputs, so the SearchField sub role was never set. Moved the implementation to mozTextAccessible. Also reenabled the tests from bug 1634373, which now pass.

Depends on D73308

Assignee: nobody → mzehe
Status: NEW → ASSIGNED
Severity: S2 → S3
Pushed by mzehe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/542a45b19b81 Add actual support for input type='search' in MacOS, r=eeejay
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: